--- a/grafana-traefik-letsencrypt-docker-compose.yml
+++ b/grafana-traefik-letsencrypt-docker-compose.yml
@@ -33,6 +33,12 @@ services:
       POSTGRES_USER: grafanadbuser
       # Database password (replace with yours)
       POSTGRES_PASSWORD: nc3i8Utm2qKGfkj4kXbNvTt
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -h 127.0.0.1"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 60s
     restart: unless-stopped
 
   grafana:
@@ -95,8 +101,10 @@ services:
       - "traefik.http.middlewares.compresstraefik.compress=true"
     restart: unless-stopped
     depends_on:
-      - postgres
-      - traefik
+      postgres:
+        condition: service_healthy
+      traefik:
+        condition: service_healthy
 
   traefik:
     # Image tag (replace with yours)
@@ -183,5 +191,7 @@ services:
       POSTGRES_PASSWORD: nc3i8Utm2qKGfkj4kXbNvTt
     restart: unless-stopped
     depends_on:
-      - postgres
-      - grafana
+      postgres:
+        condition: service_healthy
+      grafana:
+        condition: service_healthy
