--- a/grafana-traefik-letsencrypt-docker-compose.yml
+++ b/grafana-traefik-letsencrypt-docker-compose.yml
@@ -1,16 +1,66 @@
-# Grafana with Let's Encrypt in a Docker Compose
+# Grafana with Let's Encrypt Using Docker Compose
+
+# The complete installation guide is available on my https://www.heyvaldemar.com/install-grafana-using-docker-compose/
+
+# Change variables in the `.env` to meet your requirements.
+# Note that the `.env` file should be in the same directory as `grafana-traefik-letsencrypt-docker-compose.yml`.
+
+# Create networks for your services before deploying the configuration using the commands:
+# `docker network create traefik-network`
+# `docker network create grafana-network`
+
+# Deploy Grafana using Docker Compose:
+# `docker compose -f grafana-traefik-letsencrypt-docker-compose.yml -p grafana up -d`
+
+# Backups
+# The `backups` container in the configuration is responsible for the following:
+# 1. **Database Backup**: Creates compressed backups of the PostgreSQL database using pg_dump.
+# Customizable backup path, filename pattern, and schedule through variables like `POSTGRES_BACKUPS_PATH`, `POSTGRES_BACKUP_NAME`, and `BACKUP_INTERVAL`.
+# 2. **Application Data Backup**: Compresses and stores backups of the application data on the same schedule. Controlled via variables such as `DATA_BACKUPS_PATH`, `DATA_BACKUP_NAME`, and `BACKUP_INTERVAL`.
+# 3. **Backup Pruning**: Periodically removes backups exceeding a specified age to manage storage.
+# Customizable pruning schedule and age threshold with `POSTGRES_BACKUP_PRUNE_DAYS` and `DATA_BACKUP_PRUNE_DAYS`.
+# By utilizing this container, consistent and automated backups of the essential components of your instance are ensured.
+# Moreover, efficient management of backup storage and tailored backup routines can be achieved through easy and flexible configuration using environment variables.
+
+# # grafana-restore-database.sh Description
+# This script facilitates the restoration of a database backup.
+# 1. **Identify Containers**: It first identifies the service and backups containers by name, finding the appropriate container IDs.
+# 2. **List Backups**: Displays all available database backups located at the specified backup path.
+# 3. **Select Backup**: Prompts the user to copy and paste the desired backup name from the list to restore the database.
+# 4. **Stop Service**: Temporarily stops the service to ensure data consistency during restoration.
+# 5. **Restore Database**: Executes a sequence of commands to drop the current database, create a new one, and restore it from the selected compressed backup file.
+# 6. **Start Service**: Restarts the service after the restoration is completed.
+# To make the `grafana-restore-database.shh` script executable, run the following command:
+# `chmod +x grafana-restore-database.sh`
+# Usage of this script ensures a controlled and guided process to restore the database from an existing backup.
+
+# # grafana-restore-application-data.sh Description
+# This script is designed to restore the application data.
+# 1. **Identify Containers**: Similarly to the database restore script, it identifies the service and backups containers by name.
+# 2. **List Application Data Backups**: Displays all available application data backups at the specified backup path.
+# 3. **Select Backup**: Asks the user to copy and paste the desired backup name for application data restoration.
+# 4. **Stop Service**: Stops the service to prevent any conflicts during the restore process.
+# 5. **Restore Application Data**: Removes the current application data and then extracts the selected backup to the appropriate application data path.
+# 6. **Start Service**: Restarts the service after the application data has been successfully restored.
+# To make the `grafana-restore-application-data.sh` script executable, run the following command:
+# `chmod +x grafana-restore-application-data.sh`
+# By utilizing this script, you can efficiently restore application data from an existing backup while ensuring proper coordination with the running service.
 
 # Author
-# hey, I’m Vladimir Mikhalev, but my friends call me Valdemar.
+# I’m Vladimir Mikhalev, the Docker Captain, but my friends can call me Valdemar.
+# https://www.docker.com/captains/vladimir-mikhalev/
 
 # My website with detailed IT guides: https://www.heyvaldemar.com/
 # Follow me on YouTube: https://www.youtube.com/channel/UCf85kQ0u1sYTTTyKVpxrlyQ?sub_confirmation=1
 # Follow me on Twitter: https://twitter.com/heyValdemar
 # Follow me on Instagram: https://www.instagram.com/heyvaldemar/
+# Follow me on Threads: https://www.threads.net/@heyvaldemar
+# Follow me on Mastodon: https://hachyderm.io/@heyValdemar
+# Follow me on Bluesky: https://bsky.app/profile/heyvaldemar.bsky.social
 # Follow me on Facebook: https://www.facebook.com/heyValdemarFB/
 # Follow me on TikTok: https://www.tiktok.com/@heyvaldemar
-# Follow me on [LinkedIn](https://www.linkedin.com/in/heyvaldemar/)
-# Follow me on [GitHub](https://github.com/heyvaldemar)
+# Follow me on LinkedIn: https://www.linkedin.com/in/heyvaldemar/
+# Follow me on GitHub: https://github.com/heyvaldemar
 
 # Communication
 # Chat with IT pros on Discord: https://discord.gg/AJQGCCBcqf
@@ -23,38 +73,33 @@
 # Support on Ko-fi: https://ko-fi.com/heyValdemar
 # Support on PayPal: https://www.paypal.com/paypalme/heyValdemarCOM
 
-# Install Docker Engine and Docker Compose by following my guide: https://www.heyvaldemar.com/install-docker-engine-and-docker-compose-on-ubuntu-server/
-
-# Note that ldap.toml should be in the same directory with grafana-traefik-letsencrypt-docker-compose.yml
-# Edit ldap.toml according to your requirements.
-
-# Run grafana-restore-database.sh to restore database if needed.
-
-# Deploy Grafana server with a Docker Compose using the command:
-# docker compose -f grafana-traefik-letsencrypt-docker-compose.yml -p grafana up -d
-
-# Detailed installation guide can be found on my website: https://www.heyvaldemar.com/install-grafana-on-ubuntu-server/
+networks:
+  grafana-network:
+    external: true
+  traefik-network:
+    external: true
 
 volumes:
+  grafana-data:
   grafana-postgres:
-  grafana-postgres-backups:
+  grafana-postgres-backup:
+  grafana-data-backups:
+  grafana-database-backups:
   traefik-certificates:
 
 services:
   postgres:
-    # Image tag (replace with yours)
-    image: postgres:14
+    image: ${GRAFANA_POSTGRES_IMAGE_TAG}
     volumes:
       - grafana-postgres:/var/lib/postgresql/data
     environment:
-      # Database name (replace with yours)
-      POSTGRES_DB: grafanadb
-      # Database user (replace with yours)
-      POSTGRES_USER: grafanadbuser
-      # Database password (replace with yours)
-      POSTGRES_PASSWORD: nc3i8Utm2qKGfkj4kXbNvTt
+      POSTGRES_DB: ${GRAFANA_DB_NAME}
+      POSTGRES_USER: ${GRAFANA_DB_USER}
+      POSTGRES_PASSWORD: ${GRAFANA_DB_PASSWORD}
+    networks:
+      - grafana-network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres -h 127.0.0.1"]
+      test: [ "CMD", "pg_isready", "-q", "-d", "${GRAFANA_DB_NAME}", "-U", "${GRAFANA_DB_USER}" ]
       interval: 10s
       timeout: 5s
       retries: 3
@@ -62,55 +107,46 @@ services:
     restart: unless-stopped
 
   grafana:
-    # Image tag (replace with yours)
-    image: grafana/grafana:9.3.2
+    image: ${GRAFANA_IMAGE_TAG}
     volumes:
-      - ./ldap.toml:/etc/grafana/ldap.toml
+      - grafana-data:${DATA_PATH}
     environment:
-      GF_DATABASE_TYPE: postgres
-      GF_DATABASE_HOST: postgres:5432
-      # Database name (replace with yours)
-      GF_DATABASE_NAME: grafanadb
-      # Database user (replace with yours)
-      GF_DATABASE_USER: grafanadbuser
-      # Database password (replace with yours)
-      GF_DATABASE_PASSWORD: nc3i8Utm2qKGfkj4kXbNvTt
-      # Grafana domain (replace with yours)
-      GF_SERVER_DOMAIN: grafana.heyvaldemar.net
-      # Grafana URL (replace with yours)
-      GF_SERVER_ROOT_URL: https://grafana.heyvaldemar.net
-      # Grafana user (replace with yours)
-      GF_SECURITY_ADMIN_USER: grafanaadmin
-      # Grafana password (replace with yours)
-      GF_SECURITY_ADMIN_PASSWORD: cRUfgCU8zs7rC9rrGtjDitj
-      GF_AUTH_ANONYMOUS_ENABLED: 'false'
-      GF_AUTH_ANONYMOUS_DISABLE_LOGIN_FORM: 'false'
-      GF_USERS_ALLOW_SIGN_UP: 'false'
-      GF_AUTH_LDAP_ENABLED: 'true'
-      GF_AUTH_LDAP_ALLOW_SIGN_UP: 'true'
-      GF_AUTH_LDAP_CONFIG_FILE: /etc/grafana/ldap.toml
-      # Grafana plugins (replace with yours)
-      GF_INSTALL_PLUGINS: alexanderzobnin-zabbix-app
-      GF_USERS_LOGIN_HINT: username
+      GF_DATABASE_TYPE: ${GRAFANA_DB_TYPE}
+      GF_DATABASE_HOST: postgres
+      GF_DATABASE_NAME: ${GRAFANA_DB_NAME}
+      GF_DATABASE_USER: ${GRAFANA_DB_USER}
+      GF_DATABASE_PASSWORD: ${GRAFANA_DB_PASSWORD}
+      GF_SERVER_DOMAIN: ${GRAFANA_HOSTNAME}
+      GF_SERVER_ROOT_URL: ${GRAFANA_URL}
+      GF_SECURITY_ADMIN_USER: ${GRAFANA_ADMIN_USERNAME}
+      GF_SECURITY_ADMIN_PASSWORD: ${GRAFANA_ADMIN_PASSWORD}
+      GF_AUTH_ANONYMOUS_ENABLED: ${GRAFANA_AUTH_ANONYMOUS_ENABLED}
+      GF_AUTH_ANONYMOUS_DISABLE_LOGIN_FORM: ${GRAFANA_AUTH_ANONYMOUS_DISABLE_LOGIN_FORM}
+      GF_USERS_ALLOW_SIGN_UP: ${GRAFANA_USERS_ALLOW_SIGN_UP}
+      GF_PATHS_PROVISIONING: ${GRAFANA_PROVISIONING_PATH}
+      GF_PATHS_CONFIG: ${GRAFANA_CONFIG_PATH}
+      GF_PATHS_DATA: ${GRAFANA_DATA_PATH}
+      GF_PATHS_LOGS: ${GRAFANA_LOGS_PATH}
+      GF_PATHS_PLUGINS: ${GRAFANA_PLUGINS_PATH}
+      GF_INSTALL_PLUGINS: ${GRAFANA_PLUGINS_INSTALL}
       GF_SMTP_ENABLED: 'true'
-      # SMTP host (replace with yours)
-      GF_SMTP_HOST: smtp-relay.gmail.com:587
-      # SMTP user (replace with yours)
-      GF_SMTP_USER: grafana@heyvaldemar.net
-      # SMTP password (replace with yours)
-      GF_SMTP_PASSWORD: gVdNGMQh2DP7wDzW9rRgUwA
-      GF_SMTP_FROM_NAME: Grafana Alert
-      GF_SMTP_FROM_ADDRESS: grafana@heyvaldemar.net
+      GF_SMTP_HOST: ${GRAFANA_SMTP_ADDRESS}:${GRAFANA_SMTP_PORT}
+      GF_SMTP_USER: ${GRAFANA_SMTP_USER_NAME}
+      GF_SMTP_PASSWORD: ${GRAFANA_SMTP_PASSWORD}
+      GF_SMTP_FROM_NAME: ${GRAFANA_SMTP_NAME_FROM}
+      GF_SMTP_FROM_ADDRESS: ${GRAFANA_EMAIL_FROM}
+    networks:
+      - grafana-network
+      - traefik-network
     healthcheck:
-      test: ["CMD", "wget", "http://localhost:3000/","--spider"]
+      test: ["CMD", "curl", "-f", "http://localhost:3000/"]
       interval: 10s
       timeout: 5s
       retries: 3
       start_period: 5s
     labels:
       - "traefik.enable=true"
-      # Grafana URL (replace with yours)
-      - "traefik.http.routers.grafana.rule=Host(`grafana.heyvaldemar.net`)"
+      - "traefik.http.routers.grafana.rule=Host(`${GRAFANA_HOSTNAME}`)"
       - "traefik.http.routers.grafana.service=grafana"
       - "traefik.http.routers.grafana.entrypoints=websecure"
       - "traefik.http.services.grafana.loadbalancer.server.port=3000"
@@ -119,6 +155,7 @@ services:
       - "traefik.http.services.grafana.loadbalancer.passhostheader=true"
       - "traefik.http.routers.grafana.middlewares=compresstraefik"
       - "traefik.http.middlewares.compresstraefik.compress=true"
+      - "traefik.docker.network=traefik-network"
     restart: unless-stopped
     depends_on:
       postgres:
@@ -127,10 +164,9 @@ services:
         condition: service_healthy
 
   traefik:
-    # Image tag (replace with yours)
-    image: traefik:2.9
+    image: ${TRAEFIK_IMAGE_TAG}
     command:
-      - "--log.level=WARN"
+      - "--log.level=${TRAEFIK_LOG_LEVEL}"
       - "--accesslog=true"
       - "--api.dashboard=true"
       - "--api.insecure=true"
@@ -143,8 +179,7 @@ services:
       - "--providers.docker.endpoint=unix:///var/run/docker.sock"
       - "--providers.docker.exposedByDefault=false"
       - "--certificatesresolvers.letsencrypt.acme.tlschallenge=true"
-      # Email for Let's Encrypt (replace with yours)
-      - "--certificatesresolvers.letsencrypt.acme.email=callvaldemar@gmail.com"
+      - "--certificatesresolvers.letsencrypt.acme.email=${TRAEFIK_ACME_EMAIL}"
       - "--certificatesresolvers.letsencrypt.acme.storage=/etc/traefik/acme/acme.json"
       - "--metrics.prometheus=true"
       - "--metrics.prometheus.buckets=0.1,0.3,1.2,5.0"
@@ -153,6 +188,8 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - traefik-certificates:/etc/traefik/acme
+    networks:
+      - traefik-network
     ports:
       - "80:80"
       - "443:443"
@@ -164,8 +201,7 @@ services:
       start_period: 5s
     labels:
       - "traefik.enable=true"
-      # Traefik URL (replace with yours)
-      - "traefik.http.routers.dashboard.rule=Host(`traefik.grafana.heyvaldemar.net`)"
+      - "traefik.http.routers.dashboard.rule=Host(`${TRAEFIK_HOSTNAME}`)"
       - "traefik.http.routers.dashboard.service=api@internal"
       - "traefik.http.routers.dashboard.entrypoints=websecure"
       - "traefik.http.services.dashboard.loadbalancer.server.port=8080"
@@ -173,10 +209,7 @@ services:
       - "traefik.http.routers.dashboard.tls.certresolver=letsencrypt"
       - "traefik.http.services.dashboard.loadbalancer.passhostheader=true"
       - "traefik.http.routers.dashboard.middlewares=authtraefik"
-      # Basic Authentication for Traefik Dashboard
-      # Username: traefikadmin (replace with yours)
-      # Passwords must be encoded using MD5, SHA1, or BCrypt https://hostingcanada.org/htpasswd-generator/
-      - "traefik.http.middlewares.authtraefik.basicauth.users=traefikadmin:$$2y$$10$$sMzJfirKC75x/hVpiINeZOiSm.Jkity9cn4KwNkRvO7hSQVFc5FLO"
+      - "traefik.http.middlewares.authtraefik.basicauth.users=${TRAEFIK_BASIC_AUTH}"
       - "traefik.http.routers.http-catchall.rule=HostRegexp(`{host:.+}`)"
       - "traefik.http.routers.http-catchall.entrypoints=web"
       - "traefik.http.routers.http-catchall.middlewares=redirect-to-https"
@@ -184,34 +217,36 @@ services:
     restart: unless-stopped
 
   backups:
-    # Image tag (replace with yours)
-    image: postgres:14
-    # Database backups prune interval (replace with yours). Default is 7 days.
-    # find /srv/grafana-postgres/backups -type f -mtime +7 | xargs rm -f
-
-    # Grafana backups interval (replace with yours). Default is 1 day.
-    # sleep 24h
-
-    # Run grafana-restore-database.sh to restore database if needed.
-    command: sh -c 'sleep 30m
-             && while true; do
-             PGPASSWORD="$$(echo $$POSTGRES_PASSWORD)"
-             pg_dump
-             -h postgres
-             -p 5432
-             -d grafanadb
-             -U grafanadbuser | gzip > /srv/grafana-postgres/backups/grafana-postgres-backup-$$(date "+%Y-%m-%d_%H-%M").gz
-             && find /srv/grafana-postgres/backups -type f -mtime +7 | xargs rm -f;
-             sleep 24h; done'
+    image: ${GRAFANA_POSTGRES_IMAGE_TAG}
+    command: >-
+      sh -c 'sleep $BACKUP_INIT_SLEEP &&
+      while true; do
+        pg_dump -h postgres -p 5432 -d $GRAFANA_DB_NAME -U $GRAFANA_DB_USER | gzip > $POSTGRES_BACKUPS_PATH/$POSTGRES_BACKUP_NAME-$(date "+%Y-%m-%d_%H-%M").gz &&
+        tar -zcpf $DATA_BACKUPS_PATH/$DATA_BACKUP_NAME-$(date "+%Y-%m-%d_%H-%M").tar.gz $DATA_PATH &&
+        find $POSTGRES_BACKUPS_PATH -type f -mtime +$POSTGRES_BACKUP_PRUNE_DAYS | xargs rm -f &&
+        find $DATA_BACKUPS_PATH -type f -mtime +$DATA_BACKUP_PRUNE_DAYS | xargs rm -f;
+        sleep $BACKUP_INTERVAL; done'
     volumes:
-      # Database backups location
-      - grafana-postgres-backups:/srv/grafana-postgres/backups
+      - grafana-postgres-backup:/var/lib/postgresql/data
+      - grafana-data:${DATA_PATH}
+      - grafana-data-backups:${DATA_BACKUPS_PATH}
+      - grafana-database-backups:${POSTGRES_BACKUPS_PATH}
     environment:
-      # Database password (replace with yours)
-      POSTGRES_PASSWORD: nc3i8Utm2qKGfkj4kXbNvTt
+      GRAFANA_DB_NAME: ${GRAFANA_DB_NAME}
+      GRAFANA_DB_USER: ${GRAFANA_DB_USER}
+      PGPASSWORD: ${GRAFANA_DB_PASSWORD}
+      BACKUP_INIT_SLEEP: ${BACKUP_INIT_SLEEP}
+      BACKUP_INTERVAL: ${BACKUP_INTERVAL}
+      POSTGRES_BACKUP_PRUNE_DAYS: ${POSTGRES_BACKUP_PRUNE_DAYS}
+      DATA_BACKUP_PRUNE_DAYS: ${DATA_BACKUP_PRUNE_DAYS}
+      POSTGRES_BACKUPS_PATH: ${POSTGRES_BACKUPS_PATH}
+      DATA_BACKUPS_PATH: ${DATA_BACKUPS_PATH}
+      DATA_PATH: ${DATA_PATH}
+      POSTGRES_BACKUP_NAME: ${POSTGRES_BACKUP_NAME}
+      DATA_BACKUP_NAME: ${DATA_BACKUP_NAME}
+    networks:
+      - grafana-network
     restart: unless-stopped
     depends_on:
       postgres:
-        condition: service_healthy
-      grafana:
         condition: service_healthy
